--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.appsnipp.Webuy">
+    package="com.appsnipp.schooleducation">
 
     <application
         android:allowBackup="true"
@@ -12,9 +12,6 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login"></activity>
-        <activity
-            android:name=".ui.login.Connexion"
-            android:label="@string/title_activity_connexion" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
