--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity_sign_in"></activity>
         <activity
-            android:name=".LoginActivity2"
+            android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".signInActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"
+            />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
