--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'net.colindodd:gradientlayout:1.2'
     implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
     implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
