--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
     implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.google.android.material:material:1.0.0'
 }
